# icu4x

./: Cargo.toml
components/messageformat/: Cargo.toml
components/messageformat/src/: lib.rs  v1.rs
