# This file is part of ICU4X. For terms of use, please see the file
# called LICENSE at the top level of the ICU4X source tree
# (online at: https://github.com/unicode-org/icu4x/blob/main/LICENSE ).

[package]
name = "icu_messageformat"
description = "API for parsing messages in ICU Message Format 1.0"
license = "Unicode-3.0"

version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
include.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log     = { version = "0.4", optional = true }
nom     = { version = "7.1.3" }
zerovec = { workspace = true, features = ["derive"] }
